# bred64

./: Cargo.toml  README.md
src/: base_64.rs  error.rs  lib.rs  mem_allocator.rs  tests.rs
src/mem_allocator/: alloc_for_decode.rs  alloc_for_encode.rs
src/tests/: string_encoding.rs
