[package]
name = "bred64"
version = "0.1.6"
description = "A simple, highly-optimized base64 library for Rust"
edition = "2021"
license = "MIT"
repository = "https://github.com/bikathi/bred64.git"
categories = ["encoding"]
authors = ["Bikathi Martin", "bikathimartin@outlook.com"]
keywords = ["encoding", "base64"]

[dependencies]
thiserror = "2.0.16"

[lib]
name = "bred64"
path = "src/lib.rs"
